--- a/src/featured/featured.css
+++ b/src/featured/featured.css
@@ -10,4 +10,9 @@
     .featuredTitle{
         font-size: 24px;
     }
+    .company-carousel{
+        margin-bottom: 30px !important;
+        max-height: 540px;
+        max-width: 300px;
+    }
 }
