--- a/src/filters/filters.css
+++ b/src/filters/filters.css
@@ -6,7 +6,10 @@
     margin-bottom: 52px;
 }
 
-
+.width {
+  width: 250px !important;
+  cursor: pointer !important;
+}
 .dropbtn {
     background-color: white;
     display: block;
@@ -35,8 +38,8 @@
     width:inherit;
     max-width: 250px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-    max-height:400px;/* you can change as you need it */
+    z-index: 300;
+    max-height:250px;/* you can change as you need it */
     overflow:auto;
   }
   
