--- a/src/about/about.css
+++ b/src/about/about.css
@@ -29,6 +29,13 @@ h2 {
     padding-bottom: 10px;
 }
 
+.immg {
+    max-width: 100%;
+    max-height: 100%;
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+}
 @media screen and (max-width: 576px) {
     .placeHolder{
         width: 290px !important;
