--- a/src/company/company.css
+++ b/src/company/company.css
@@ -5,7 +5,7 @@
     margin-left: 40px;
     margin-right: 40px;
 }
-.wrapper{
+.wrap{
     margin-top: auto;
     height: max-content;
     align-items: flex-end !important;
