--- a/src/company/company.css
+++ b/src/company/company.css
@@ -5,6 +5,16 @@
     margin-left: 40px;
     margin-right: 40px;
 }
+
+.card-body {
+    border:none;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+.reviews {
+    display: inline-block;
+    margin-top: 10px;
+}
 .wrap{
     margin-top: auto;
     height: max-content;
@@ -18,12 +28,14 @@
 }
 .card-title {
     font-weight: 700;
-    font-size: 23.0062px;
+    font-size: 20px;
     line-height: 110%;
     color: #23242A;
 }
 .card-text {
     font-weight: 400;
+    padding-left: 20px;
+    padding-right: 20px;
     font-size: 12.5488px;
     line-height: 130%;
 }
@@ -35,6 +47,13 @@
     letter-spacing: 0.2em;
 }
 
+.card-footer {
+    border: none !important;
+}
+
+.btn {
+    border: none;
+}
 
 .list-group {
     border: 0.5px solid #E3E3E3;
@@ -55,6 +74,7 @@
     padding-left: 0 !important;
     padding-right: 0 !important;
 }
+
 
 @media screen and (max-width: 576px) {
     .card {
