--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,9 @@
+@font-face {
+    font-family: "GoldmanBold";
+    src: local("GoldmanBold"),
+     url("./fonts/Inter.ttf") format("truetype");
+    }
+
 /*fonts */ 
 .inter {
     font-family: 'Inter';
