--- a/src/navBar/navBar.css
+++ b/src/navBar/navBar.css
@@ -13,7 +13,7 @@
     font-weight: bold;
     font-size: 42px;
     line-height: 165.02%;   
-    margin-top: 87px;
+    margin-top: 70px;
     margin-bottom: 52px;
 }
 
@@ -22,7 +22,7 @@
         font-weight: 600;
         font-size: 24px;
         line-height: 29px;
-        margin-top: 1.938rem;
+        padding-top: 1rem;
         display: flex;
         justify-content: center;
         margin-left: 0px;
