--- a/src/sponsoredCompany/sponsoredCompany.css
+++ b/src/sponsoredCompany/sponsoredCompany.css
@@ -1,6 +1,6 @@
 .sponsored {
     margin-left: 20px !important;
-    font-family: 'Helvetica Neue';
+    font-family: 'Inter';
     font-style: normal;
     font-weight:lighter;
     font-size: 9.15302px;
