fixed logo margin

--- a/src/navBar/navBar.css
+++ b/src/navBar/navBar.css
@@ -43,7 +43,7 @@
         padding-top: 25px;
     }
     .nav {
-        margin-top: 1rem       
+        padding-top: 2rem       
     }
     .logo {
         text-align: center;
