--- a/src/company/company.css
+++ b/src/company/company.css
@@ -75,6 +75,23 @@
     padding-right: 0 !important;
 }
 
+.initials-avatar{
+    width:88px;
+    height:88px;
+    border-radius: 5px;
+    background-color:#52c8ff;
+    display:inline-block;
+    box-sizing:border-box}
+    
+.initials-avatar div{
+    color:#fff;
+    height:100%;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    font-size: 25px;
+    font-style:inherit;
+    font-weight:inherit}
 
 @media screen and (max-width: 576px) {
     .card {
