--- a/src/card/card.css
+++ b/src/card/card.css
@@ -37,7 +37,7 @@
 .no-deco-card :hover{
     color: black !important;
     text-decoration: none !important;
-    box-shadow: 5px 5px 26.1434px 1.5686px rgba(14, 139, 255, 0.445);
+    box-shadow: rgba(14, 139, 255, 0.445) 0px 1px 2px 0px, rgba(14, 139, 255, 0.445) 0px 2px 6px 2px;
 
 }
 
