--- a/src/company/company.css
+++ b/src/company/company.css
@@ -89,9 +89,9 @@
     display:flex;
     align-items:center;
     justify-content:center;
-    font-size: 25px;
+    font-size: 30px;
     font-style:inherit;
-    font-weight:inherit}
+    font-weight:bold}
 
 @media screen and (max-width: 576px) {
     .card {
